<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item android:id="@+id/action_settings"-->
          <!--android:title="@string/settings_menu"-->
          <!--android:orderInCategory="100"-->
          <!--app:showAsAction="never" />-->

    <item
        android:title="@string/order_by_menu"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="300"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menuSortMostPopular"
                android:title="@string/first_pref_list_entry" />
            <item
                android:id="@+id/menuSortHighestRated"
                android:title="@string/second_pref_list_entry" />

            <item
                android:id="@+id/menuSortFavorites"
                android:title="@string/third_pref_list_entry" />
        </menu>
    </item>
</menu>